Correções e adição do README
